# Drone

./: .gitignore  CLAUDE.md  README.md
docs/architecture/: ROS_architecture-3.drawio  System_Overview-2.drawio
software/: Dockerfile  compose.yml
software/drone_ws/src/drone_behavior/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_behavior/src/: mission_manager_node.cpp
software/drone_ws/src/drone_bringup/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_bringup/launch/: fake_video_chain.launch.py  mock_chain.launch.py
software/drone_ws/src/drone_control/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_control/src/: follow_controller_node.cpp
software/drone_ws/src/drone_interfaces/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_interfaces/msg/: ControlSetpoint.msg  Detection.msg  MissionState.msg  TargetState.msg  Track.msg  VehicleStatus.msg
software/drone_ws/src/drone_perception/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_perception/drone_perception/: person_detector_node.py
software/drone_ws/src/drone_perception/src/: camera_driver_node.cpp  image_preprocessing_node.cpp
software/drone_ws/src/drone_state/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_state/src/: fcu_bridge_node.cpp  mock_fcu_node.cpp  mock_target_node.cpp  world_model_node.cpp
software/drone_ws/src/drone_vision/: CMakeLists.txt  package.xml
software/drone_ws/src/drone_vision/src/: vision_node.cpp
