<?xml version="1.0"?>
<package format="3">
  <name>drone_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS 2 interfaces for the drone project</description>
  <maintainer email="you@example.com">fares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>